--- a/src/blocks/images-slider/style.scss
+++ b/src/blocks/images-slider/style.scss
@@ -104,7 +104,7 @@
     }
     
     &--dots-inside{
-        .wp-block-getwid-images-slider__wrapper{
+        .wp-block-getwid-images-slider__wrapper.slick-dotted{
             margin-bottom: 0;
             padding-bottom: 0;
         }
